manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-webapp
spec:
  selector:
    matchLabels:
      app: devops-webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: devops-webapp
    spec:
      containers:
      - name: devops-webapp
        image: marian14/web_app
        ports:
        - containerPort: 8080
