manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
spec:
  rules:
  # - host: your-spring-app.example.com
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spring-service
            port:
              number: 80
